# grocery_agent

./: .gitignore  README.md  database_setup.py  load_fdc_etl.py  main.py  requirements.txt  shopping_results.json  test_api.py  test_price_fetcher.py
app/: main.py
app/core/: llm.py  price_fetcher.py  shopping_analyzer.py  store_spider.py
grocery-agent/: README.md  pyproject.toml  test_program.py
grocery-agent/src/: __init__.py  agent.py  cli.py
grocery-agent/src/models/: grocery_item.py
grocery-agent/src/stores/: base_store.py  generic_store.py
grocery-agent/tests/: test_agent.py
tests/: test_main.py
