[tool.poetry]
name = "grocery-agent"
version = "0.1.0"
description = "An AI-powered agent that helps users find the best grocery deals"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.2"
langchain = "^0.1.0"
langchain-google-genai = "^0.0.6"
google-generativeai = "^0.3.2"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 